working on images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
 <ftn-header srcImage="imgsrc" title="cabecera" ></ftn-header>
-
-<img src="src\assets\images\Paisaje_original.jpg" alt="prueba de imagen">
+<img src="assets/images/brand.png" alt="">
