--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,12 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-@import 'tailwind-variables.scss';
+@import 'variables-project.scss';
+
+
+
+// $color-1: #ce32d4 !default;
+// :root {
+// --color-primary: #{$color-1};
+
+
+
+
+//}
