added reset Tailwind and some improvements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
 <ftn-header srcImage="imgsrc" title="cabecera" ></ftn-header>
-<img src="assets/images/brand.png" alt="">
+
+<main></main>
+
+<ftn-footer></ftn-footer>
+
+
+
+
+
+<!-- la imagen si la toma pero a través del srcImage no -->
+<!-- <img src="assets/images/brand.png" alt=""> -->
