added main structures

--- a/src/_variables-project.scss
+++ b/src/_variables-project.scss
@@ -1,5 +1,11 @@
 :root{
 
-    --header-bg: rgba(206, 55, 55, .3); // example again
+    --header-bg: #d9ed92;
+    --hero-bg: #b5e48c;
+    --brands-bg: #99d98c;
+    --benefits-bg: #76c893;
+    --banner-bg: #52b69a;
+    --contact-bg: #34a0a4;
+    --footer-bg: #168aad; 
     
 }
