--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
 <ftn-header srcImage="imgsrc" title="cabecera" ></ftn-header>
 
-<main></main>
+<main>
+
+    <ftn-hero></ftn-hero>
+    <ftn-brands></ftn-brands>
+    <ftn-benefits></ftn-benefits>
+
+</main>
 
 <ftn-footer></ftn-footer>
 
