--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
-<ftn-header srcImage="imgsrc" title="cabecera" ></ftn-header>
+<ftn-header srcImage="assets/images/logo.svg" 
+            altImage="Logo empresarial"
+            buttonCtaText="Contáctanos" >
+</ftn-header>
 
 <main>
 
     <ftn-hero></ftn-hero>
     <ftn-brands></ftn-brands>
     <ftn-benefits></ftn-benefits>
+    <ftn-contact></ftn-contact>
 
 </main>
 
