import button component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,10 @@
 
 </main>
 
+<ftn-button type="primary" label="Guardar"></ftn-button>
+<ftn-button type="secondary" label="Cancelar"></ftn-button>
+<ftn-button type="danger" label="Eliminar"></ftn-button>
+
 <ftn-footer></ftn-footer>
 
 
