btn button scss changes

--- a/src/_variables-project.scss
+++ b/src/_variables-project.scss
@@ -6,6 +6,7 @@
     --benefits-bg: #76c893;
     --banner-bg: #52b69a;
     --contact-bg: #34a0a4;
-    --footer-bg: #168aad; 
-    
+    --footer-bg: #168aad;
+    --button-bg: pink;
+
 }
