--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,7 @@
 
 </main>
 
-<ftn-button type="primary" label="Guardar"></ftn-button>
-<ftn-button type="secondary" label="Cancelar"></ftn-button>
-<ftn-button type="danger" label="Eliminar"></ftn-button>
+<ftn-button label="Guardar"></ftn-button>
 
 <ftn-footer></ftn-footer>
 
