minor fixes in btn button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
 </main>
 
-<ftn-button label="Guardar"></ftn-button>
+<ftn-button label="Guardar" design="2"></ftn-button>
 
 <ftn-footer></ftn-footer>
 
