--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ftn-header srcImage="assets/images/logo.svg" 
+<ftn-header srcImage="assets/images/brand.svg" 
             altImage="Logo empresarial"
             buttonCtaText="Contáctanos" >
 </ftn-header>
@@ -8,7 +8,6 @@
     <ftn-hero></ftn-hero>
     <ftn-brands></ftn-brands>
     <ftn-benefits></ftn-benefits>
-    <ftn-contact></ftn-contact>
 
 </main>
 
