--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<ftn-header srcImage="assets/images/brand.svg" 
+<ftn-header srcImage="assets/images/brand.svg"
             altImage="Logo empresarial"
             buttonCtaText="Contáctanos" >
 </ftn-header>
 
 <main>
 
-    <ftn-hero></ftn-hero>
+    <ftn-hero [button]="true"></ftn-hero>
     <ftn-brands></ftn-brands>
     <ftn-benefits></ftn-benefits>
 
