working on button component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <ftn-header srcImage="assets/images/brand.svg"
             altImage="Logo empresarial"
-            buttonCtaText="Contáctanos" >
+            [button]="true"
+            label="New Btn Name" >
 </ftn-header>
 
 <main>
@@ -11,7 +12,7 @@
 
 </main>
 
-<ftn-button label="Guardar" design="2"></ftn-button>
+<ftn-button label="Guardar" design="cta"></ftn-button>
 
 <ftn-footer></ftn-footer>
 
