--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,19 @@
 <ftn-header srcImage="assets/images/brand.svg"
             altImage="Logo empresarial"
             [button]="true"
+            buttonLabel="header-label"
             label="New Btn Name" >
 </ftn-header>
 
 <main>
 
-    <ftn-hero [button]="true"></ftn-hero>
+    <ftn-hero [button]="true" buttonLabel="hero-label"></ftn-hero>
     <ftn-brands></ftn-brands>
     <ftn-benefits></ftn-benefits>
 
 </main>
 
-<ftn-button label="Guardar" design="cta"></ftn-button>
+<ftn-button label="button-label" design="cta"></ftn-button>
 
 <ftn-footer></ftn-footer>
 
