update hero styles

--- a/src/_variables-project.scss
+++ b/src/_variables-project.scss
@@ -14,7 +14,7 @@
 
 
     --hero-padding:         2rem 0.5rem;
-    --hero-bg:              var(--brand-color-3);
+    --hero-bg:              white;
     --hero-h1-color:        var(--brand-color-2);
     --hero-h1-font-size:    3rem;
     --hero-h1-font-weight:  700;
