working on brands styles

--- a/src/_variables-project.scss
+++ b/src/_variables-project.scss
@@ -19,7 +19,7 @@
     --hero-h1-font-size:    3rem;
     --hero-h1-font-weight:  700;
 
-    --brands-bg:    #99d98c;
+    --brands-bg:    var(--brand-color-3);
 
     --benefits-bg:  #76c893;
 
