--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,10 @@
               imgAlt="Image important">
     </ftn-hero>
 
-    <ftn-brands></ftn-brands>
+    <ftn-brands imgSrc="assets/images/brand-img.png"
+                imgAlt="Logo 1">
+
+    </ftn-brands>
     <ftn-benefits></ftn-benefits>
 
 </main>
