working on benefits styles

--- a/src/_variables-project.scss
+++ b/src/_variables-project.scss
@@ -21,7 +21,7 @@
 
     --brands-bg:    var(--brand-color-3);
 
-    --benefits-bg:  #76c893;
+    --benefits-bg:  var(--brand-color);
 
     --banner-bg:    #52b69a;
 
