--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,13 +20,13 @@
 
     <ftn-brands imgSrc="assets/images/brand-img.png"
                 imgAlt="Logo 1">
-
     </ftn-brands>
-    <ftn-benefits></ftn-benefits>
+
+    <ftn-benefits>
+    </ftn-benefits>
 
 </main>
 
-<ftn-button btnLabel="button-label"></ftn-button>
 
 <ftn-footer></ftn-footer>
 
